[gd_scene load_steps=7 format=2]

[ext_resource path="res://packages/fnf/resources/graphics/week1/ship/ship.glb" type="PackedScene" id=1]
[ext_resource path="res://scripts/game/events/ShipPlayer.gd" type="Script" id=2]
[ext_resource path="res://packages/fnf/resources/graphics/week1/ship/fire/shipBlueFireAnim.tres" type="PlaneMesh" id=3]
[ext_resource path="res://packages/fnf/resources/graphics/week1/ship/fire/shipFireNormal.tres" type="Material" id=4]
[ext_resource path="res://packages/fnf/resources/graphics/week1/ship/fire/shipFireHyperspeed.tres" type="Material" id=5]
[ext_resource path="res://packages/fnf/resources/graphics/week1/ship/fire/shipNormalFireAnim.tres" type="PlaneMesh" id=6]

[node name="ship" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="OmniLight" type="OmniLight" parent="." index="1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00414801, 3.04187, 1.72134 )
light_color = Color( 0.356863, 1, 0.968627, 1 )
light_energy = 3.462

[node name="OmniLight2" type="OmniLight" parent="." index="2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00414801, 3.04187, -9.32946 )
light_color = Color( 1, 0.811765, 0.164706, 1 )
light_energy = 12.522
omni_range = 4.90355

[node name="Particles" type="Particles" parent="." index="3"]
transform = Transform( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -0.0500746, 3.53856, -7.81615 )
process_material = ExtResource( 4 )
draw_pass_1 = ExtResource( 6 )

[node name="Particles2" type="Particles" parent="." index="4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0500746, 3.53856, -7.81615 )
process_material = ExtResource( 4 )
draw_pass_1 = ExtResource( 6 )

[node name="WarningLight" type="OmniLight" parent="." index="5"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00414801, 3.04187, 1.72134 )
visible = false
light_color = Color( 1, 0.478431, 0.478431, 1 )
light_energy = 3.462

[node name="HyperSpeedLight" type="OmniLight" parent="." index="6"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00414801, 3.04187, -9.32946 )
visible = false
light_color = Color( 0.164706, 1, 0.921569, 1 )
light_energy = 12.522
omni_range = 4.90355

[node name="ParticlesHyperSpeed2" type="Particles" parent="." index="7"]
transform = Transform( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -0.0500746, 3.53856, -7.81615 )
visible = false
process_material = ExtResource( 5 )
draw_pass_1 = ExtResource( 3 )

[node name="ParticlesHyperSpeed" type="Particles" parent="." index="8"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0500746, 3.53856, -7.81615 )
visible = false
process_material = ExtResource( 5 )
draw_pass_1 = ExtResource( 3 )
